--- a/sisa16_dbg.1
+++ b/sisa16_dbg.1
@@ -20,6 +20,12 @@ A settings file can be kept in your home folder (/home/fred/) or the current wor
 for sisa16's debugger. This allows you to configure things like the defaults of how disassemblies
 are displayed, and how many blank lines are required to clear the screen.
 
+.SH SESSION SETTINGS
+
+Session-specific things such as breakpoints and stored variables are kept in a special ".dbg" file.
+
+it stores all variables from the session as well as breakpoints.
+
 .SH DEBUGGER COMMANDS
 
 press 'h' and hit enter while the REPL is open to view the commands available to you.
