--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -636,9 +636,9 @@ You can set a symbol to be exported to a .hasm.tmp file using...
 
 ..export"myMacro"
 
-You can then put, anywhere in the file, the following directive:
+You can then put at the bottom of the file:
 
-asm_export_header
+ASM_EXPORT_HEADER
 
 .TP
 .B Syntactic Sugar
