--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -843,6 +843,12 @@ End the active restriction.
 halt assembly
 
 .TP
+.B the single quotes ('')
+
+Used to create character literals.
+Multi-character literals are not allowed. Escape codes are provided like C.
+
+.TP
 .B the dollar sign ($)
 
 builtin macro that expands to the current output counter as a high-low byte pair. Is expanded inside of
