--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -860,6 +860,14 @@ macro definitions to allow for labels to be constructed.
 builtin macro that expands to the current output counter. Is expanded inside of macro
 definitions for labels.
 
+You can add an amount to it like this:
+
+@+1+
+
+You can get the region only, by using ampersand after it.
+
+@+1+&
+
 .TP
 .B SPLIT (%%)
 
