--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -711,7 +711,7 @@ VAR#myProcedure#sc%@%;call;
 
 "..include"file.h"" is syntactic sugar for "ASM_header file.h"
 
-"..include "file.h"" is syntactic sugar for "ASM_header file.h", it must have exactly one space.
+"..dinclude"file.h"" is syntactic sugar for "ASM_data_include file.h"
 
 The following syntactic sugars are allowed to prefix something,
 they must be at the beginning of a line, after preceding whitespace:
