--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -118,6 +118,8 @@ The additional region of memory outside the normal SISA16 address space, which i
 allocated at runtime, used for mass storage (the heap). Typically for loading files or extremely large structures,
 but can also be used to hold code.
 
+.B SDL2 Driver Only
+
 .B Screen Memory:
 153600 bytes starting at 0xB00000 which are used for the screen in the AV driver.
 
