--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -293,41 +293,10 @@ farildb: load byte using far memory indexing at [(u8)c<<16 + (u16)a] (1 byte) (4
 
 faristb: store byte into far memory indexing at [(u8)c<<16 + (u16)a] (1 byte) (4A)
 
-.B FIXED POINT OPERATIONS: 
-16 multiply instructions. add and subtract carry over.
+.B FREE SLOTS: 
+16 free opcodes, behaving as nop duplicates.
 ranging from 4B to 5A. All 1 byte.
 
-imul15.1: fixed-point multiply of a and b, 15.1
-
-imul14.2: fixed-point multiply of a and b
-
-imul13.3: fixed-point multiply of a and b
-
-imul12.4: fixed-point multiply of a and b
-
-imul11.5: fixed-point multiply of a and b
-
-imul10.6: fixed-point multiply of a and b
-
-imul9.7: fixed-point multiply of a and b
-
-imul8.8: fixed-point multiply of a and b
-
-imul7.9: fixed-point multiply of a and b
-
-imul6.10: fixed-point multiply of a and b
-
-imul5.11: fixed-point multiply of a and b
-
-imul4.12: fixed-point multiply of a and b
-
-imul3.13: fixed-point multiply of a and b
-
-imul2.14: fixed-point multiply of a and b
-
-imul1.15: fixed-point multiply of a and b
-
-imul.16: fixed-point multiply of a and b
 
 alpush: push short register a onto the stack. (1 byte) (5B)
 
