--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -625,6 +625,8 @@ boolify: make a into boolean, a = (a != 0) (D6)
 
 nota: make a into inverse boolean, a = (a == 0) (D7)
 
+user_farista: store a to user memory location ((c & 255)<<16)+b  (D8)
+
 The rest: halt duplicates, free for expansion (1 byte)
 
 .TP
