--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -627,6 +627,8 @@ nota: make a into inverse boolean, a = (a == 0) (D7)
 
 user_farista: store a to user memory location ((c & 255)<<16)+b  (D8)
 
+task_ric: If pre-emption is enabled, reset the current task's instruction counter to zero.  (D9)
+
 The rest: halt duplicates, free for expansion (1 byte)
 
 .TP
