--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -803,8 +803,7 @@ results in different values.
 .TP
 .B Headers
 
-ASM_header can be used to include asm files into a program, from the current working directory or SISA16BIN or
-your home folder /sisa16/, or /usr/include/sisa16/
+ASM_header can be used to include asm files into a program, from the current working directory or /usr/include/sisa16/
 
 .TP
 .B Data
