--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -527,7 +527,9 @@ seg_ld: load segment RX1 into page RX0 of Main Memory. (1 byte) (AB)
 
 seg_st: store segment RX0 from main memory into page RX1 in the segment. (1 byte) (AC)
 
-seg_realloc: resize the segment to size specified by RX0. if RX0 is 0, the Segment is freed. (1 byte) (AD)
+.B Free Instruction 
+
+that behaves as a NOP duplicate. (1 byte) (AD)
 
 fltadd: floating point addition, RX0 += RX1, disabled with -DNO_FP (1 byte) (AE)
 
