--- a/sisa16_asm.1
+++ b/sisa16_asm.1
@@ -234,7 +234,7 @@ illdb b = [c], indirectly load 2 bytes int B through C (1 byte)(23)
 
 illdaa, a = [a] indirectly load 2 bytes into A through A (1 byte)(24)
 
-illdbb, b = [b] indirectly load 2 bytes into B through B (1 byte)(25)
+cpcr, c = program counter region (1 byte)(25)
 
 illdab, a = [b] indirectly load 2 bytes into A through B (1 byte)(26)
 
